feat:viewing tours from author added
